--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                   <use href="./images/icons.svg#icon-satelite"></use>
                 </svg>
               </div>
-              <h3 class="third-h">Strategy</h3>
+              <h3 class="third-h special">Strategy</h3>
               <p class="p-strategy">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
@@ -101,7 +101,7 @@
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h3 class="third-h">Punctuality</h3>
+              <h3 class="third-h special">Punctuality</h3>
               <p class="p-strategy">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
@@ -113,7 +113,7 @@
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <h3 class="third-h">Diligence</h3>
+              <h3 class="third-h special">Diligence</h3>
               <p class="p-strategy">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
@@ -125,7 +125,7 @@
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="third-h">Technologies</h3>
+              <h3 class="third-h special">Technologies</h3>
               <p class="p-strategy">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
@@ -504,7 +504,8 @@
       </div>
     </footer>
     <!-- Section Modal -->
-    <div class="backdrop is-open" data-modal>
+    <div class="backdrop" data-modal>
+      <!--is-open-->
       <div class="modal">
         <button class="close-butt" type="button" data-modal-close>
           <svg class="icon-close" width="8" height="8">
